<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGrayPrime"
    tools:context=".UploadActivity">


    <RelativeLayout
        android:id="@+id/menuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButtonForCreateFrg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/np_back_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/forwardButtonForCreateFrg"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentRight="true"
            android:layout_weight="1"
            android:layout_gravity="right"
            android:src="@drawable/np_forward_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/textAndColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/menuLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        
        <View
            android:id="@+id/chooseColor"
            android:layout_width="@dimen/_8sdp"
            android:layout_height="match_parent"
            android:background="@color/darkLightGray"/>

        <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mediumGreen"
        android:ems="10"
        android:hint="@string/notes_title"
        android:padding="@dimen/_10sdp"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/white"
        android:textColorHint="@color/beigePrime"
        android:textSize="26sp" />
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/layoutImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/textAndColor">

        <ImageView
        android:id="@+id/imageNote"
        android:layout_width="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_height="@dimen/_300sdp"
        android:visibility="gone"/>

        <ImageView
            android:id="@+id/imageDelete"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/np_delete"
            android:layout_margin="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:visibility="gone"
            android:layout_gravity="center"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_10sdp"
        android:orientation="vertical"
        android:id="@id/layoutWebUrl"
        android:background="@color/darkLightGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutImage">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/npWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/mediumGreen"
            android:background="@null"
            android:textSize="@dimen/_14sdp"
            android:padding="@dimen/_10sdp"
            android:hint="@string/notesWeb"
            android:inputType="textMultiLine"
            android:textColor="@color/white"
            android:text="https://"
            android:textColorHint="@color/white" />

            <ImageView
                android:id="@+id/imageUrlDelete"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:src="@drawable/np_cancel"
                android:visibility="visible"
                android:layout_gravity="center"/>
        </LinearLayout>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:background="@color/colorAccent"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="#0D47A1"
                android:textSize="@dimen/_12sdp"
                />

            <Button
                android:id="@+id/btnOkay"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_5sdp"
                android:background="@color/colorAccent"
                android:text="@string/ok"
                android:textAllCaps="false"
                android:textColor="#0D47A1"
                android:textSize="@dimen/_12sdp"
                />

        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:id="@+id/AfterWeb"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutWebUrl"
        >

        <TextView
            android:id="@+id/npAfterWebLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:ellipsize="end"
            android:visibility="gone"
            android:padding="@dimen/_10sdp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_12ssp"
            android:autoLink="web"
            />

    </LinearLayout>



    <EditText
        android:id="@+id/noteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/mediumGreen"
        android:textSize="@dimen/_14sdp"
        android:padding="@dimen/_10sdp"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/AfterWeb"
         />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <ImageView
            android:id="@+id/slideMore"
            android:layout_width="@dimen/_24sdp"
            android:layout_height="@dimen/_24sdp"
            android:src="@drawable/np_menu_more"
            android:layout_gravity="center"/>
        
    </FrameLayout>


    
</androidx.constraintlayout.widget.ConstraintLayout>