<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutNote"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        app:cardElevation="@dimen/_5sdp"
        android:layout_margin="@dimen/_5sdp"
        app:cardBackgroundColor="@color/darkLightGray"
        android:padding="@dimen/_5sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:visibility="gone"
                app:riv_corner_radius_top_left="@dimen/_10sdp"
                app:riv_corner_radius_top_right="@dimen/_10sdp" />

            <TextView
                android:id="@+id/cardTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/mediumGreen"
                android:hint="@string/notes_title"
                android:inputType="text"
                android:maxLines="1"
                android:minHeight="32dp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:textColor="@color/white"
                android:textColorHint="@color/beigePrime"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/usWebLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginBottom="@dimen/_5sdp"
                android:ellipsize="end"
                android:visibility="gone"
                android:padding="@dimen/_6sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_12ssp"
                android:autoLink="web" />

            <TextView
                android:id="@+id/noteEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/mediumGreen"
                android:hint="@string/notes_snote"
                android:paddingTop="@dimen/_5sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:maxLines="1"
                android:textColor="@color/shortNoteText"
                android:textColorHint="@color/beigePrime"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/noteDateTime"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/mediumGreen"
                    android:ems="10"
                    android:hint="@string/notes_date"
                    android:inputType="text"
                    android:maxLines="1"
                    android:paddingStart="@dimen/_10sdp"
                    android:paddingTop="@dimen/_2sdp"
                    android:paddingBottom="@dimen/_5sdp"
                    android:textColor="@color/shortDateText"
                    android:textColorHint="@color/beigePrime"
                    android:textSize="@dimen/_8ssp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent"
                     />

                    <ImageView
                        android:id="@+id/notePin"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:src="@drawable/np_saved"
                        android:layout_marginStart="-30dp"
                        android:visibility="invisible"
                        />
            </LinearLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    
</LinearLayout>